Changes to Project 1

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ a:hover {
 .nav .name {
     display: block;
     margin-right: auto;
+    background-color:black;
     color: white;
 }
 .nav li {
@@ -57,7 +58,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
+  background: url('images/belfast-city.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -86,7 +87,7 @@ header .profile-image:hover {
 } 
 .location {
   background-color: #222;
-  color: yellow;
+  color: white;
 }
 .card {
   margin: 30px;
